[gd_scene load_steps=9 format=3 uid="uid://c0dw4ilb1nlpv"]

[ext_resource type="PackedScene" uid="uid://bwdrhioxpgw8w" path="res://Scripts/Component/party_state.tscn" id="1_4u08h"]
[ext_resource type="Script" uid="uid://bscsevng1jetm" path="res://Scripts/Camera.gd" id="1_65vc6"]
[ext_resource type="Script" uid="uid://bmggyk8r61kqp" path="res://Scripts/Component/Party/OuterPartyState.gd" id="1_cndjl"]
[ext_resource type="Script" uid="uid://bmd1g3ee4qeap" path="res://Scripts/Component/Winnerbox.gd" id="2_btjfc"]
[ext_resource type="Script" uid="uid://bpclcwc1b4hbt" path="res://Scripts/Component/Party/EventCamera2D.gd" id="4_p042i"]
[ext_resource type="Texture2D" uid="uid://bw4olr64hmi6m" path="res://Resource/Graphics/ControlGuide.png" id="5_it1qk"]
[ext_resource type="Texture2D" uid="uid://2xuya26b3f56" path="res://Resource/Graphics/MapBox.png" id="6_gdqw5"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ohdaq"]

[node name="Game" type="Node"]

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
z_index = -2
offset_right = 576.0
offset_bottom = 324.0
stretch = true

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer"]
unique_name_in_owner = true
handle_input_locally = false
canvas_item_default_texture_filter = 0
canvas_cull_mask = 4294967235
size = Vector2i(576, 324)
render_target_update_mode = 4

[node name="Camera2D" type="Camera3D" parent="SubViewportContainer/SubViewport"]
cull_mask = 1048515
script = ExtResource("1_65vc6")

[node name="party_state" parent="SubViewportContainer/SubViewport" groups=["Party"] instance=ExtResource("1_4u08h")]

[node name="Camera2D2" type="Camera2D" parent="SubViewportContainer/SubViewport"]
zoom = Vector2(0.5, 0.5)

[node name="Control" type="Control" parent="SubViewportContainer"]
layout_mode = 2

[node name="NinePatchRect" type="NinePatchRect" parent="SubViewportContainer/Control"]
z_index = 2
layout_mode = 2
offset_right = 576.0
offset_bottom = 320.0
texture = ExtResource("6_gdqw5")
region_rect = Rect2(0, 0, 254, 163.5)
patch_margin_left = 22
patch_margin_top = 23
patch_margin_right = 23
patch_margin_bottom = 19

[node name="Label" type="Label" parent="SubViewportContainer/Control/NinePatchRect"]
layout_mode = 0
offset_left = 224.0
offset_top = 16.0
offset_right = 312.0
offset_bottom = 74.0
theme_override_font_sizes/font_size = 40
text = "MAP"

[node name="SubViewportContainer2" type="SubViewportContainer" parent="."]
z_index = -2
custom_minimum_size = Vector2(576, 324)
offset_left = 576.0
offset_right = 1152.0
offset_bottom = 324.0

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer2"]
handle_input_locally = false
canvas_item_default_texture_filter = 0
canvas_cull_mask = 4294967237
size = Vector2i(576, 324)
render_target_update_mode = 4

[node name="Camera2D" type="Camera3D" parent="SubViewportContainer2/SubViewport"]
cull_mask = 1048517
script = ExtResource("1_65vc6")
player_id = 1

[node name="Camera2D2" type="Camera2D" parent="SubViewportContainer2/SubViewport"]
zoom = Vector2(0.5, 0.5)

[node name="Control" type="Control" parent="SubViewportContainer2"]
layout_mode = 2

[node name="NinePatchRect" type="NinePatchRect" parent="SubViewportContainer2/Control"]
z_index = 2
layout_mode = 2
offset_right = 576.0
offset_bottom = 320.0
texture = ExtResource("6_gdqw5")
region_rect = Rect2(0, 0, 254, 163.5)
patch_margin_left = 22
patch_margin_top = 23
patch_margin_right = 23
patch_margin_bottom = 19

[node name="Label" type="Label" parent="SubViewportContainer2/Control/NinePatchRect"]
layout_mode = 0
offset_left = 224.0
offset_top = 16.0
offset_right = 312.0
offset_bottom = 74.0
theme_override_font_sizes/font_size = 40
text = "MAP"

[node name="SubViewportContainer3" type="SubViewportContainer" parent="."]
z_index = -2
offset_top = 324.0
offset_right = 576.0
offset_bottom = 648.0

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer3"]
handle_input_locally = false
canvas_item_default_texture_filter = 0
canvas_cull_mask = 4294967241
size = Vector2i(576, 324)
render_target_update_mode = 4

[node name="Camera2D" type="Camera3D" parent="SubViewportContainer3/SubViewport"]
cull_mask = 1048521
script = ExtResource("1_65vc6")
player_id = 2

[node name="Camera2D2" type="Camera2D" parent="SubViewportContainer3/SubViewport"]
zoom = Vector2(0.5, 0.5)

[node name="Control" type="Control" parent="SubViewportContainer3"]
layout_mode = 2

[node name="NinePatchRect" type="NinePatchRect" parent="SubViewportContainer3/Control"]
z_index = 2
layout_mode = 2
offset_right = 576.0
offset_bottom = 320.0
texture = ExtResource("6_gdqw5")
region_rect = Rect2(0, 0, 254, 163.5)
patch_margin_left = 22
patch_margin_top = 23
patch_margin_right = 23
patch_margin_bottom = 19

[node name="Label" type="Label" parent="SubViewportContainer3/Control/NinePatchRect"]
layout_mode = 0
offset_left = 224.0
offset_top = 16.0
offset_right = 312.0
offset_bottom = 74.0
theme_override_font_sizes/font_size = 40
text = "MAP"

[node name="SubViewportContainer4" type="SubViewportContainer" parent="."]
z_index = -2
offset_left = 576.0
offset_top = 324.0
offset_right = 1152.0
offset_bottom = 648.0

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer4"]
handle_input_locally = false
canvas_item_default_texture_filter = 0
canvas_cull_mask = 4294967249
size = Vector2i(576, 324)
render_target_update_mode = 4

[node name="Camera2D" type="Camera3D" parent="SubViewportContainer4/SubViewport"]
cull_mask = 1048529
script = ExtResource("1_65vc6")
player_id = 3

[node name="Camera2D2" type="Camera2D" parent="SubViewportContainer4/SubViewport"]
zoom = Vector2(0.5, 0.5)

[node name="Control" type="Control" parent="SubViewportContainer4"]
layout_mode = 2

[node name="NinePatchRect" type="NinePatchRect" parent="SubViewportContainer4/Control"]
z_index = 2
layout_mode = 2
offset_right = 576.0
offset_bottom = 320.0
texture = ExtResource("6_gdqw5")
region_rect = Rect2(0, 0, 254, 163.5)
patch_margin_left = 22
patch_margin_top = 23
patch_margin_right = 23
patch_margin_bottom = 19

[node name="Label" type="Label" parent="SubViewportContainer4/Control/NinePatchRect"]
layout_mode = 0
offset_left = 224.0
offset_top = 16.0
offset_right = 312.0
offset_bottom = 74.0
theme_override_font_sizes/font_size = 40
text = "MAP"

[node name="SubViewportContainer5" type="SubViewportContainer" parent="."]
z_index = -2
custom_minimum_size = Vector2(1152, 648)
offset_top = -648.0
offset_right = 1152.0
stretch = true

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer5"]
handle_input_locally = false
canvas_item_default_texture_filter = 0
canvas_cull_mask = 4294967265
size = Vector2i(1152, 648)
render_target_update_mode = 4

[node name="Camera3D" type="Camera3D" parent="SubViewportContainer5/SubViewport"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1158.38, 648, 0)
top_level = true
cull_mask = 1048545
script = ExtResource("4_p042i")

[node name="Camera2D" type="Camera2D" parent="SubViewportContainer5/SubViewport"]
zoom = Vector2(0.5, 0.5)

[node name="ColorRect" type="ColorRect" parent="."]
z_index = -7
offset_left = -520.0
offset_top = -968.0
offset_right = 1840.0
offset_bottom = 864.0
color = Color(0, 0, 0, 1)

[node name="party_state" type="Node2D" parent="."]
script = ExtResource("1_cndjl")

[node name="ColorRect2" type="ColorRect" parent="party_state"]
z_index = -1
custom_minimum_size = Vector2(4, 4)
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 576.0
offset_right = 580.0
offset_bottom = 648.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="ColorRect6" type="ColorRect" parent="party_state"]
z_index = -1
custom_minimum_size = Vector2(4, 4)
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_right = 4.0
offset_bottom = 648.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="ColorRect7" type="ColorRect" parent="party_state"]
z_index = -1
custom_minimum_size = Vector2(4, 4)
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 1148.0
offset_right = 1152.0
offset_bottom = 648.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="ColorRect3" type="ColorRect" parent="party_state"]
z_index = -1
custom_minimum_size = Vector2(4, 4)
offset_top = 324.0
offset_right = 1152.0
offset_bottom = 328.0
color = Color(0, 0, 0, 1)

[node name="ColorRect4" type="ColorRect" parent="party_state"]
z_index = -1
custom_minimum_size = Vector2(4, 4)
offset_right = 1152.0
offset_bottom = 4.0
color = Color(0, 0, 0, 1)

[node name="ColorRect5" type="ColorRect" parent="party_state"]
z_index = -1
custom_minimum_size = Vector2(4, 4)
offset_top = 644.0
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0, 0, 0, 1)

[node name="UI" type="Control" parent="party_state"]
z_index = -1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="party_state/UI"]
custom_minimum_size = Vector2(1152, 648)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1152.0
offset_bottom = 648.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.262745, 0.137255, 0.392157, 0.568627)

[node name="PlacementBased" type="Control" parent="party_state/UI"]
anchors_preset = 0
offset_left = -56.0
offset_top = -16.0
offset_right = -16.0
offset_bottom = 24.0

[node name="Winnerbox" type="Control" parent="party_state/UI/PlacementBased"]
anchors_preset = 0
offset_left = 320.0
offset_top = 128.0
offset_right = 360.0
offset_bottom = 168.0
scale = Vector2(2, 2)
script = ExtResource("2_btjfc")
type = 2
metadata/_edit_group_ = true

[node name="CheckBox" type="CheckBox" parent="party_state/UI/PlacementBased/Winnerbox"]
layout_mode = 0
offset_left = 52.0
offset_right = 84.0
offset_bottom = 32.0

[node name="SpinBox" type="SpinBox" parent="party_state/UI/PlacementBased/Winnerbox"]
layout_mode = 0
offset_left = 32.0
offset_right = 115.062
offset_bottom = 31.0
min_value = 1.0
max_value = 5.0
value = 1.0

[node name="Button" type="Button" parent="party_state/UI/PlacementBased/Winnerbox"]
custom_minimum_size = Vector2(64, 32)
layout_mode = 0
offset_left = 32.0
offset_top = 32.0
offset_right = 103.0
offset_bottom = 64.0
text = "Confirm"

[node name="Winnerbox2" type="Control" parent="party_state/UI/PlacementBased"]
anchors_preset = 0
offset_left = 672.0
offset_top = 128.0
offset_right = 712.0
offset_bottom = 168.0
scale = Vector2(2, 2)
script = ExtResource("2_btjfc")
type = 2
metadata/_edit_group_ = true

[node name="CheckBox" type="CheckBox" parent="party_state/UI/PlacementBased/Winnerbox2"]
layout_mode = 0
offset_left = 52.0
offset_right = 84.0
offset_bottom = 32.0

[node name="SpinBox" type="SpinBox" parent="party_state/UI/PlacementBased/Winnerbox2"]
layout_mode = 0
offset_left = 32.0
offset_right = 115.062
offset_bottom = 31.0
min_value = 1.0
max_value = 5.0
value = 1.0

[node name="Button" type="Button" parent="party_state/UI/PlacementBased/Winnerbox2"]
custom_minimum_size = Vector2(64, 32)
layout_mode = 0
offset_left = 32.0
offset_top = 32.0
offset_right = 103.0
offset_bottom = 64.0
text = "Confirm"

[node name="Winnerbox3" type="Control" parent="party_state/UI/PlacementBased"]
anchors_preset = 0
offset_left = 320.0
offset_top = 448.0
offset_right = 360.0
offset_bottom = 488.0
scale = Vector2(2, 2)
script = ExtResource("2_btjfc")
type = 2
metadata/_edit_group_ = true

[node name="CheckBox" type="CheckBox" parent="party_state/UI/PlacementBased/Winnerbox3"]
layout_mode = 0
offset_left = 52.0
offset_right = 84.0
offset_bottom = 32.0

[node name="SpinBox" type="SpinBox" parent="party_state/UI/PlacementBased/Winnerbox3"]
layout_mode = 0
offset_left = 32.0
offset_right = 115.062
offset_bottom = 31.0
min_value = 1.0
max_value = 5.0
value = 1.0

[node name="Button" type="Button" parent="party_state/UI/PlacementBased/Winnerbox3"]
custom_minimum_size = Vector2(64, 32)
layout_mode = 0
offset_left = 32.0
offset_top = 32.0
offset_right = 103.0
offset_bottom = 64.0
text = "Confirm"

[node name="Winnerbox4" type="Control" parent="party_state/UI/PlacementBased"]
anchors_preset = 0
offset_left = 672.0
offset_top = 448.0
offset_right = 712.0
offset_bottom = 488.0
scale = Vector2(2, 2)
script = ExtResource("2_btjfc")
type = 2
metadata/_edit_group_ = true

[node name="CheckBox" type="CheckBox" parent="party_state/UI/PlacementBased/Winnerbox4"]
layout_mode = 0
offset_left = 52.0
offset_right = 84.0
offset_bottom = 32.0

[node name="SpinBox" type="SpinBox" parent="party_state/UI/PlacementBased/Winnerbox4"]
layout_mode = 0
offset_left = 32.0
offset_right = 115.062
offset_bottom = 31.0
min_value = 1.0
max_value = 5.0
value = 1.0

[node name="Button" type="Button" parent="party_state/UI/PlacementBased/Winnerbox4"]
custom_minimum_size = Vector2(64, 32)
layout_mode = 0
offset_left = 32.0
offset_top = 32.0
offset_right = 103.0
offset_bottom = 64.0
text = "Confirm"

[node name="TeamBased" type="Control" parent="party_state/UI"]
visible = false
anchors_preset = 0
offset_left = -56.0
offset_top = 56.0
offset_right = -16.0
offset_bottom = 96.0

[node name="Winnerbox" type="Control" parent="party_state/UI/TeamBased"]
layout_mode = 3
anchors_preset = 0
offset_left = 240.0
offset_top = 208.0
offset_right = 280.0
offset_bottom = 248.0
scale = Vector2(2, 2)
script = ExtResource("2_btjfc")
metadata/_edit_group_ = true

[node name="CheckBox" type="CheckBox" parent="party_state/UI/TeamBased/Winnerbox"]
layout_mode = 0
offset_left = 52.0
offset_right = 84.0
offset_bottom = 32.0

[node name="SpinBox" type="SpinBox" parent="party_state/UI/TeamBased/Winnerbox"]
layout_mode = 0
offset_left = 32.0
offset_right = 115.062
offset_bottom = 31.0
max_value = 4.0
value = 1.0

[node name="Button" type="Button" parent="party_state/UI/TeamBased/Winnerbox"]
custom_minimum_size = Vector2(64, 32)
layout_mode = 0
offset_left = 32.0
offset_top = 32.0
offset_right = 103.0
offset_bottom = 64.0
text = "Confirm"

[node name="Winnerbox2" type="Control" parent="party_state/UI/TeamBased"]
layout_mode = 3
anchors_preset = 0
offset_left = 752.0
offset_top = 208.0
offset_right = 792.0
offset_bottom = 248.0
scale = Vector2(2, 2)
script = ExtResource("2_btjfc")
metadata/_edit_group_ = true

[node name="CheckBox" type="CheckBox" parent="party_state/UI/TeamBased/Winnerbox2"]
layout_mode = 0
offset_left = 52.0
offset_right = 84.0
offset_bottom = 32.0

[node name="SpinBox" type="SpinBox" parent="party_state/UI/TeamBased/Winnerbox2"]
layout_mode = 0
offset_left = 32.0
offset_right = 115.062
offset_bottom = 31.0
max_value = 4.0
value = 1.0

[node name="Button" type="Button" parent="party_state/UI/TeamBased/Winnerbox2"]
custom_minimum_size = Vector2(64, 32)
layout_mode = 0
offset_left = 32.0
offset_top = 32.0
offset_right = 103.0
offset_bottom = 64.0
text = "Confirm"

[node name="Confirm" type="Control" parent="party_state/UI"]
visible = false
anchors_preset = 0
offset_left = -32.0
offset_top = -56.0
offset_right = 8.0
offset_bottom = -16.0

[node name="Winnerbox" type="Control" parent="party_state/UI/Confirm"]
layout_mode = 3
anchors_preset = 0
offset_left = 472.0
offset_top = 280.0
offset_right = 515.0
offset_bottom = 323.0
scale = Vector2(2, 2)
script = ExtResource("2_btjfc")
type = 4
metadata/_edit_group_ = true

[node name="CheckBox" type="CheckBox" parent="party_state/UI/Confirm/Winnerbox"]
layout_mode = 0
offset_left = 44.0
offset_top = -24.0
offset_right = 76.0
offset_bottom = 8.0

[node name="SpinBox" type="SpinBox" parent="party_state/UI/Confirm/Winnerbox"]
layout_mode = 0
offset_left = 32.0
offset_right = 115.062
offset_bottom = 31.0
max_value = 4.0
value = 1.0

[node name="Button" type="Button" parent="party_state/UI/Confirm/Winnerbox"]
custom_minimum_size = Vector2(64, 32)
layout_mode = 0
offset_left = 32.0
offset_top = 32.0
offset_right = 103.0
offset_bottom = 64.0
text = "Confirm"

[node name="New_Game" type="Control" parent="party_state/UI"]
anchors_preset = 0
offset_left = -32.0
offset_top = -56.0
offset_right = 8.0
offset_bottom = -16.0

[node name="Winnerbox" type="Control" parent="party_state/UI/New_Game"]
layout_mode = 3
anchors_preset = 0
offset_left = 472.0
offset_top = 280.0
offset_right = 515.0
offset_bottom = 323.0
scale = Vector2(2, 2)
script = ExtResource("2_btjfc")
type = 4
metadata/_edit_group_ = true

[node name="CheckBox" type="CheckBox" parent="party_state/UI/New_Game/Winnerbox"]
layout_mode = 0
offset_left = 44.0
offset_top = -24.0
offset_right = 76.0
offset_bottom = 8.0

[node name="SpinBox" type="SpinBox" parent="party_state/UI/New_Game/Winnerbox"]
layout_mode = 0
offset_left = 32.0
offset_right = 115.062
offset_bottom = 31.0
max_value = 4.0
value = 1.0

[node name="Button" type="Button" parent="party_state/UI/New_Game/Winnerbox"]
custom_minimum_size = Vector2(64, 32)
layout_mode = 0
offset_left = 32.0
offset_top = 32.0
offset_right = 103.0
offset_bottom = 64.0
text = "New"

[node name="Load_Game" type="Control" parent="party_state/UI"]
anchors_preset = 0
offset_left = -32.0
offset_top = -56.0
offset_right = 8.0
offset_bottom = -16.0

[node name="Winnerbox" type="Control" parent="party_state/UI/Load_Game"]
layout_mode = 3
anchors_preset = 0
offset_left = 472.0
offset_top = 352.0
offset_right = 515.0
offset_bottom = 395.0
scale = Vector2(2, 2)
script = ExtResource("2_btjfc")
type = 4
metadata/_edit_group_ = true

[node name="CheckBox" type="CheckBox" parent="party_state/UI/Load_Game/Winnerbox"]
layout_mode = 0
offset_left = 44.0
offset_top = -24.0
offset_right = 76.0
offset_bottom = 8.0

[node name="SpinBox" type="SpinBox" parent="party_state/UI/Load_Game/Winnerbox"]
layout_mode = 0
offset_left = 32.0
offset_right = 115.062
offset_bottom = 31.0
max_value = 4.0
value = 1.0

[node name="Button" type="Button" parent="party_state/UI/Load_Game/Winnerbox"]
custom_minimum_size = Vector2(64, 32)
layout_mode = 0
offset_left = 32.0
offset_top = 32.0
offset_right = 103.0
offset_bottom = 86.0
text = "Load
"

[node name="WinnerTakeAll" type="Label" parent="party_state/UI"]
visible = false
layout_mode = 0
offset_left = 184.0
offset_top = 24.0
offset_right = 455.0
offset_bottom = 50.0
scale = Vector2(3, 3)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 6
text = "Winner TAKE ALL: 1 = +9 coin| 0= -1"

[node name="n1v3" type="Label" parent="party_state/UI"]
visible = false
layout_mode = 0
offset_left = 184.0
offset_top = 24.0
offset_right = 455.0
offset_bottom = 50.0
scale = Vector2(3, 3)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 6
text = "1v3: check the winning team
(Red)                                     (Blue)"

[node name="n2v2" type="Label" parent="party_state/UI"]
visible = false
layout_mode = 0
offset_left = 184.0
offset_top = 24.0
offset_right = 455.0
offset_bottom = 50.0
scale = Vector2(3, 3)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 6
text = "2v2: check the winning team
(Red)                                     (Blue)"

[node name="n3v1" type="Label" parent="party_state/UI"]
visible = false
layout_mode = 0
offset_left = 184.0
offset_top = 24.0
offset_right = 455.0
offset_bottom = 50.0
scale = Vector2(3, 3)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 6
text = "3v1: check the winning team
(Red)                                     (Blue)"

[node name="FreeForAll" type="Label" parent="party_state/UI"]
visible = false
layout_mode = 0
offset_left = 184.0
offset_top = 24.0
offset_right = 455.0
offset_bottom = 50.0
scale = Vector2(3, 3)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 6
text = "Free FOR ALL: 1 = +9 coin| 5 = -1"

[node name="WhomstPlaying" type="Label" parent="party_state/UI"]
layout_mode = 0
offset_left = 184.0
offset_top = 24.0
offset_right = 455.0
offset_bottom = 76.0
scale = Vector2(3, 3)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 6
text = "Who is Human? Checked = Human"

[node name="MapMode" type="Control" parent="party_state"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0

[node name="TurnNumber" type="Label" parent="Camera2D"]
unique_name_in_owner = true
z_index = 2
offset_left = 528.0
offset_top = -2.0
offset_right = 685.0
offset_bottom = 70.0
scale = Vector2(0.6, 0.6)
theme_override_colors/font_color = Color(1, 0, 0.258824, 1)
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxEmpty_ohdaq")
text = "Turn:1"

[node name="ControlGuide" type="Sprite2D" parent="Camera2D"]
unique_name_in_owner = true
position = Vector2(576, 592)
scale = Vector2(0.65, 0.65)
texture = ExtResource("5_it1qk")
